# photopropulsion

./: .gitignore  Cargo.toml  README.md  config.toml  run.sh  terminal_vel.npy
src/: data_inspect.py  demo_equilibrium.py  interstellar.py  interstellar_eta.py  interstellar_heatmap.py  interstellar_pow.py  interstellar_vs_power.py  io.rs  main.rs  params.py  plotter.py  plotter_compare.py  reflectivity_spectrum.py  scheduler.py  scheduler_parallel.py  simulation.py  single_run.py  solver.rs  spectral_components.py  spectrum.py  th_pow.py  thermal.rs  thermal_tradeoff.py  types.rs
src/plotting/: bragg.py  interstellar.py  interstellar_vs_power.py  plotter.py  plotter_compare.py  reflectivity_spectrum.py  scheduler.py  simple_planck_spectrum.py  spectral_components.py  spectrum.py
src/tools/: csv_handler.py  diffraction.py  imd2csv.py  interpolate.py
