[package]
name = "photopropulsion"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.8"
simple_logger = "5.0.0"
csv = "1.3.0"
serde = {version="1.0.204", features = ["derive"] }
toml = "0.8.14"
roots = "0.0.8"

[profile.release]
opt-level = 3
